# joint-lstm-parser-dynet-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: pred_identification_format.py
example/: predict_example.transitions
parser/: CMakeLists.txt  c2.h  datastructs.h  lstm-parse.cc  tag-bilstm.cc
scripts/: build.sh  build_with_cuda.sh  predict.sh  predict_predicaate_identification.sh  prepare_boost.sh  prepare_conll_data_and_train_en.sh  prepare_conll_data_and_train_zh.sh  prepare_conll_data_en.sh  prepare_conll_data_zh.sh  prepare_eigen.sh  prepare_mkl.sh  prepare_submodule.sh  readme  resume_training.sh  test.sh  train_predicate_identification.sh
