PROJECT(dynet:parser)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
find_package (Threads)

ADD_EXECUTABLE(lstm-parse lstm-parse.cc)
target_link_libraries(lstm-parse dynet ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} )
if (WITH_CUDA_BACKEND)
    add_dependencies(lstm-parse gdynet)
    target_link_libraries(lstm-parse gdynet)
    CUDA_ADD_CUBLAS_TO_TARGET(lstm-parse)
endif (WITH_CUDA_BACKEND)
